重构游戏服务和命令处理，增强玩家动作和游戏流程